--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "author": "Nattaphat Laoharawee <nattaphat.la@gmail.com>",
   "private": false,
   "main": "src/components/Editor.vue",
-  "repository" :
-  { 
-    "type" : "git",
-    "url" : "https://github.com/JumpLao/classwin-editor.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JumpLao/classwin-editor.git"
   },
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -26,10 +25,12 @@
     "imports-loader": "^0.7.1",
     "katex": "^0.7.1",
     "mathjs": "^3.13.3",
+    "moment": "^2.18.1",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.3.3",
-    "vue-quill-editor": "^2.2.2"
+    "vue-quill-editor": "^2.2.2",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -108,7 +109,12 @@
   "browserify": {
     "transform": [
       [
-        "babelify", { "presets": ["es2015"] }
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
       ],
       [
         "vueify"
