--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "classwin-editor",
-  "version": "1.0.6",
+  "version": "1.0.24",
   "description": "A Vue.js project",
   "author": "Nattaphat Laoharawee <nattaphat.la@gmail.com>",
   "private": false,
   "main": "src/components/Editor.vue",
-  "repository" :
-  { 
-    "type" : "git",
-    "url" : "https://github.com/JumpLao/classwin-editor.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JumpLao/classwin-editor.git"
   },
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -42,6 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "babelify": "^7.3.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
@@ -90,6 +90,7 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vueify": "^9.4.1",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
@@ -108,7 +109,12 @@
   "browserify": {
     "transform": [
       [
-        "babelify", { "presets": ["es2015"] }
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
       ],
       [
         "vueify"
